# cg-lab07

./: CMakeLists.txt  README.md
include/: MyMainWindow.hpp  MyOpenGLWidget.hpp  NURBS.hpp  Point.hpp
resources/: resources.qrc
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: MyMainWindow.cpp  MyOpenGLWidget.cpp  NURBS.cpp  main.cpp
tests/: t1.json  t2.json  t3.json  t4.json
